--- a/daon/css/special.css
+++ b/daon/css/special.css
@@ -17,7 +17,7 @@
     text-align: center;
     white-space: pre-line;
     font-size:14px;
-    margin-bottom:50px;
+    margin-bottom:40px;
     line-height:1.5em;
 }
 .special_spot .spot_txt p:nth-of-type(1){
@@ -29,56 +29,63 @@
 .gallery{width:80%; margin:0 auto;}
 
 
-/* gallery slide */
+/* slide */
 
-.gallery .slide{
-    width:80%; margin:0 auto;
-    position:relative;
-    width:100%; height:100%;
+.banner{
+    width:100%; margin:0 auto;
+    position: relative;
 }
-.gallery .slide figure img{
-    width:100%;}
-
-
-
-/* direc */
-
-.slide .direc{
-    position:absolute;
-    left:10%; top:45%;
-    width:80%; margin:0 auto;
+.banner_list .slide {
+    width:100%;
+    height:600px;
+    background-repeat: no-repeat;
+    background-position:center top;
+    background-size:cover;
     text-align:center;
+    padding-top:163px;
+    box-sizing: border-box;
 }
-.slide .direc div{
-    color:white;
-    width:100%; margin:0;
+.banner_list img{
+    width:100%;
+    height:100%;
+}
+
+
+.controls{
+    width:80%;
     display:flex;
     justify-content: space-between;
     align-items: center;
-}
-
-
-/* indigator */
-.slide .indi{
     position:absolute;
-    right:10%; bottom:5%;
+    left:10%; top:50%;
+    text-align:center;
+    transform:translateY(-50%);
+    z-index:102;
+}
+.controls a{
+    font-size:55px;
+    color:rgba(255,255,255,0.5);
+    z-index:102;
 
 }
-.slide .indi ul::after{
-    content:'';
-    clear:both;
+
+.pager{
+    position:absolute;
+    left:0; right:0; bottom:27px;
+    text-align: center;
+    z-index:103;
+}
+.pager span{
+    width:15px; height:15px;
+    background:rgba(255,255,255,0.8);
+    border:3px solid transparent;
+    margin:0 15px; border-radius:50%;
+    text-indent: -9999em;
     display:inline-block;
 }
-.slide .indi ul{
-    float:right;
-}
-.slide .indi ul li{
-    display:inline-block;
-    width:10px; height:10px;
-    background:white;
-    border-radius: 50%;
-    margin:0 3px;
-    box-shadow: 2px 2px rgba(0,0,0,0.4);
+.pager span.cycle-pager-active{
+    background:none;
+    border:3px solid rgba(255,255,255,0.8);
 }
 
 /* all_special */
@@ -169,6 +176,15 @@ footer{
         font-size:0.7rem;
     }
 
+    .controls a{
+        font-size:30px;
+    }
+    .pager{bottom:0;}
+    .pager span{
+        width:10px; height:10px;
+        margin:0 10px;
+    }
+
     /* tab */
 
     .prologue_tab{
@@ -218,6 +234,9 @@ footer{
         height:2em;
         line-height:2em;
         font-size:10px;
+    }
+    .all_special div figure:hover figcaption a{
+        display:none;
     }
 
 }
