--- a/daon/css/main.css
+++ b/daon/css/main.css
@@ -142,7 +142,9 @@
 }
 
 .main_con1 li figure img{
-    width:100%; vertical-align: top;
+    width:100%; 
+    height:100%;
+    vertical-align: top;
 }
 
 
@@ -151,7 +153,7 @@
     flex-direction: column;
     justify-content: center;
     width:42%; 
-    padding:0 60px;
+    padding:60px;
     box-sizing:border-box;
     background:#fcf3e4;
 }
@@ -234,43 +236,9 @@
     white-space: pre-line;
 }
 
-.schejule{
-    width:3em; height:3em;
-    background:#003a3a;
-    position:fixed;
-    right:0%; bottom:15%;
-    z-index:201;
-    text-align:center;
-    transition:0.5s;}
 
-.schejule a{
-    font-size:1.5em;
-    color:white;
-    text-align:center;
-    line-height:1.8em;
-}
-.schejule:hover{
-    background:#ceb581;
-}
 
-.fixed{
-    width:100%; height:100%;
-}
-.fixed div{
-    position:fixed;
-    right:0%;
-    bottom:5%;
-    width:3em; height:3em;
-    z-index:200;
-    text-align:center;
-}
-.fixed div a{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items:center;
-    color:#ceb581;
-}
+
 
 
 
