--- a/daon/css/reservation.css
+++ b/daon/css/reservation.css
@@ -51,19 +51,25 @@
     text-align:center;
     font-size:13px;
     white-space: pre-line;
-    /* border:1px solid #dcdcdc; */
     table-layout: fixed;
-    
+    border:1px solid rgb(209, 208, 208);
+}
+.refund table caption{
+    text-indent:-9999px;
 }
 .refund table thead tr{
     width:100%;
     background:#eee;
     height:100%;
 }
+.refund table thead tr th{
+    border:1px solid rgb(209, 208, 208);
+}
 .refund table tbody tr td{
     width:100%;
     text-align:center;
     font-size:13px;
+    border:1px solid rgb(209, 208, 208);
 }
 
 /* --------------responsive----------- */
