--- a/daon/css/room.css
+++ b/daon/css/room.css
@@ -35,6 +35,7 @@ ul,li{list-style: none; margin:0; padding:0;}
 }
 .room_spot li div:nth-of-type(1) h3{
     white-space: pre-line;
+    font-weight: 400;
     font-size:16px;
 }
 .room_spot li div:nth-of-type(1) h3 small{
@@ -59,7 +60,7 @@ ul,li{list-style: none; margin:0; padding:0;}
     text-decoration: none;
     color:white;
     line-height: 30px;
-    font-size:0.5rem;
+    font-size:0.8rem;
 }
 .room_spot li div:nth-of-type(1) a:hover{
     color:#ceb581;
@@ -84,27 +85,25 @@ ul,li{list-style: none; margin:0; padding:0;}
 .room_spot li div:nth-of-type(2) figure figcaption{
     width:100%; height:100%;
     text-align:center;
-    /* position:absolute;
-    left:0; bottom:-100%; */
+    position:absolute;
+    left:0; top:0;
     overflow: hidden;
+    background:rgba(0,0,0,0.6);
+    opacity:0;
 }
 .room_spot li div:nth-of-type(2) figure figcaption a{
+    position:absolute;
+    left:50%; top:50%;
+    transform:translate(-50%,-50%);
     text-decoration:none;
     display:inline-block;
     text-align:center;
     font-size:30px;
     color:white;
-    width:100%; height:100%;
-    position:absolute;
-    left:0; bottom:-100%;
-    line-height:10em;
-    background:rgba(0,0,0,0.6);
 }
 
-
-.room_spot li:hover div:nth-of-type(2) figure figcaption a{
-    bottom:0;
-    
+.room_spot li:hover div:nth-of-type(2) figure figcaption{
+    opacity:1;
 }
 .room_spot li:hover div:nth-of-type(2) figure img{
     animation: large .5s forwards ease;
@@ -125,6 +124,242 @@ ul,li{list-style: none; margin:0; padding:0;}
 .room_spot li:nth-of-type(even) div:nth-of-type(1) a{
     margin-left:auto;}
 
+/* slide */
+
+.mainspot{
+    width:100%; height:100vh;
+    margin:0 auto;
+    position:relative;
+    display:none;
+}
+.only101.pop{
+    display:block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,0.6);
+}
+.only102.pop{
+    display:block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,0.6);
+}
+.love101.pop{
+    display:block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,0.6);
+}
+.love102.pop{
+    display:block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0,0.6);
+}
+
+.mainspot-wrap{width:100%; height:50%;}
+.mainspot .slide{
+    display: flex;
+    height: 50%;
+    position: absolute;
+    width: 80%;
+    top: 25%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.slidewrap{width: 65%; position:relative;}
+.room_photo{
+    width:100%; height:100%;
+}
+.mainspot .slide figure{
+    width:100%; height:100%;
+    /* position:absolute;
+    left:0; top:0; */
+}
+.mainspot .slide figure img{
+    width:100%; height:100%;
+}
+
+.regular{width:100%; height:100%;}
+
+/* direc */
+
+.slide .direc{
+    position:absolute;
+    margin:0 auto;
+    text-align:center;
+    width: 100%;
+    padding: 0 30px;
+    top: 50%;
+}
+.slide .direc div{
+    width:100%; margin:0;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.prev, .next{color:white !important;}
+
+
+/* indigator */
+.mainspot .slide .indi{
+    position:absolute;
+    bottom:5%;
+    width: 100%;
+    left: 0;
+    padding: 0 30px;
+}
+.mainspot .slide .indi ul{text-align: center;}
+.mainspot .slide .indi ul li{
+    display:inline-block;
+    width:10px; height:10px;
+    border:1px solid white;
+    background-color:rgba(255,255,255,0.2);
+    border-radius: 50%;
+    margin:0 5px;
+}
+.mainspot .slide .indi ul li.active{
+    background-color:white;
+}
+
+
+
+/* popup */
+
+
+.popup{
+    width:35%; height:100%;
+    overflow-y: scroll;
+}
+.popup.detail{
+    display:block;
+}
+.popup_all{
+    width:100%;
+    background:white;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: top;
+    padding:40px;
+    position:relative;
+}
+.popup_all h2{
+    font-weight: 400;
+}
+
+.close{
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    right: -5%;
+    top: 0;
+    display: inline-block;
+}
+.close span{
+    width: 100%;
+    height: 1px;
+    background-color: white;
+    display: inline-block;
+    position: absolute;
+    right: 0;
+}
+
+.close span:nth-of-type(1) {
+    top: 50%;
+    -webkit-transform: translateY(0) rotate(-45deg);
+    transform: translateY(0) rotate(-45deg);
+}
+
+.close span:nth-of-type(2) {
+    bottom: 0;
+    -webkit-transform: translateY(-11px) rotate(45deg);
+    transform: translateY(-11px) rotate(45deg);
+}
+
+
+.popup_all.close:after{
+    content:'';
+    display:block;
+    clear:both;
+}
+
+.popup h4{
+    margin:20px 0;
+    font-size:16px;
+}
+.popup h4::before{
+    content:'';
+    width:3px; height:16px;
+    background:#1c222e;
+    display:inline-block;
+    margin:auto 10px auto 0;
+    /* margin-right:10px; */
+}
+
+.popup .popup_01{
+    width:100%;
+}
+.popup .popup_01 div{
+    
+}
+.popup .popup_01 div p{
+    line-height: 2em;
+    color:#555;
+    margin-right:5%;
+    font-size: 13px;
+    width: 40%;
+    display: inline-block;
+}
+.popup .popup_01 div p:last-child{width:100%;}
+.popup .popup_01 div p::before{
+    content:'';
+    width:3px; height:3px;
+    background:#000;
+    border-radius: 50%;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right:2%;
+}
+.popup .popup_01 a{
+    width:100%; height:8%;
+    background:#1c222e;
+    text-align:center;
+    display:inline-block;
+    color:white;
+    line-height: 3.5em;
+    font-size:0.5rem;
+    margin: 5% 0;
+}
+.popup .popup_01 a:hover{
+    color:#ceb581;
+}
+
+.popup .popup_02{
+    width:100%;
+}
+.popup .popup_02 h4{}
+.popup .popup_02 table{
+    width:100%;
+    table-layout: fixed;
+    font-size:13px;
+    text-align:center;
+}
+
+.popup .popup_02 .thead{
+    background:#eee;
+}
+.popup .popup_02 p{
+    font-size:12px;
+    margin-top:2%;
+}
+.popup .popup_02 p b{
+    color:#ceb581;
+}
 
 /* --------------responsive----------- */
 
@@ -187,5 +422,23 @@ ul,li{list-style: none; margin:0; padding:0;}
     .room_spot li div:nth-of-type(1) a {
         width:100%;
     }
+
+    .mainspot .slide{
+        flex-direction: column !important;
+        top: 20% !important;
+        height: 70% !important;
+    }
+
+    .slidewrap, .popup{
+        width:100% !important;
+        height:100% !important;
+    }
+    .popup_all{padding:20px !important;}
+    .direc , .indi {width:100% !important;}
+    .close{
+        top: 5% !important;
+        right: 5% !important;
+    }
+
 
 }
