--- a/daon/css/travel.css
+++ b/daon/css/travel.css
@@ -45,6 +45,7 @@ ul,li{list-style: none; margin:0; padding:0;}
     display:flex;
     justify-content: space-between;
     align-items: center;
+    margin-top:10px;
 }
 .tourist ul li div b{
     font-size:15px;
