--- a/daon/css/prologue.css
+++ b/daon/css/prologue.css
@@ -72,18 +72,6 @@ ul,li{list-style: none; margin:0; padding:0;}
     width:100%; vertical-align: middle;
 }
 
-.prologue_wel div:hover figure,
-.prologue_wel div:hover p{
-    animation:wel 2s forwards;
-}
-@keyframes wel{
-    0%{
-        transform:translateY(30%);
-        }
-    100%{
-        transform:translateY(0);
-        }
-}
 
 
 
@@ -124,61 +112,39 @@ ul,li{list-style: none; margin:0; padding:0;}
 /* land slide */
 
 /* slide */
-
-.banner{
-    width:100%; margin:0 auto;
-    position: relative;
+.slidewrap{
+    position:relative;
+    overflow: hidden;
 }
-.banner_list .slide {
-    width:100%;
-    height:600px;
-    background-repeat: no-repeat;
-    background-position:center top;
-    background-size:cover;
-    text-align:center;
-    padding-top:163px;
-    box-sizing: border-box;
+.slides{
+    width:100%; height:600px;
 }
-.banner_list img{
-    width:100%;
-}
-
-
-.controls{
-    width:80%;
+.slides div{
     display:flex;
+    width: 100%;
+    height:100%;
+    transition:1.5s;
+}
+.slides div img{
+    min-width: 100%;
+}
+
+/* direc */
+
+.direc{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+.direc div{
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    position:absolute;
-    left:10%; top:50%;
-    text-align:center;
-    transform:translateY(-50%);
-    z-index:102;
-}
-.controls a{
-    font-size:55px;
-    color:rgba(255,255,255,0.5);
-    z-index:102;
-
-}
-
-.pager{
-    position:absolute;
-    left:0; right:0; bottom:27px;
-    text-align: center;
-    z-index:103;
-}
-.pager span{
-    width:15px; height:15px;
-    background:rgba(255,255,255,0.8);
-    border:3px solid transparent;
-    margin:0 15px; border-radius:50%;
-    text-indent: -9999em;
-    display:inline-block;
-}
-.pager span.cycle-pager-active{
-    background:none;
-    border:3px solid rgba(255,255,255,0.8);
+    width: 100%;
+    height: 100%;
+    padding: 0 10%;
 }
 
 
@@ -188,38 +154,38 @@ ul,li{list-style: none; margin:0; padding:0;}
     width:100%; margin:0 auto;
 }
 
-.map{
+.loca-wrap{
     width:80%; margin:0 auto;
     display:flex;
-    justify-content: center;
-    padding-bottom:5%;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .prologue_loca .loca_info{
     width:80%; margin:0 auto;
     
 }
 .prologue_loca .loca_info ul{
-    display:flex;
-    justify-content: space-between;
     width:100%; margin:0 auto;
     padding:0 5%;
 }
 .prologue_loca .loca_info ul li{
-    display:inline-block;
+    display:flex;
     width:100%;
-    margin:20px 0;
+    padding-bottom:20px;
 }
 
-.prologue_loca .loca_info ul li img{
-    margin-right:5px;
-}
 
 .prologue_loca .loca_info ul li span{
+    display:inline-block;
+}
+.icon{font-size:1.3em;}
+.prologue_loca .loca_info ul li span:nth-of-type(2){
     white-space: pre-line;
-    width:85%; height:auto;
+    width:100%;
     line-height:1.5em;
     font-size:14px;
-    display:inline-block;
+    margin-left:20px;
 }
 
 /* ----------responsive---------- */
