--- a/daon/css/room.css
+++ b/daon/css/room.css
@@ -164,16 +164,17 @@ ul,li{list-style: none; margin:0; padding:0;}
 .mainspot-wrap{width:100%; height:50%;}
 .mainspot .slide{
     display: flex;
-    height: 50%;
+    height: 60%;
     position: absolute;
     width: 80%;
     top: 25%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translateX(-50%) translateY(-5%);
 }
-.slidewrap{width: 65%; position:relative;}
+.slidewrap{width: 65%; position:relative; height:100%;}
 .room_photo{
     width:100%; height:100%;
+    overflow: hidden;
 }
 .mainspot .slide figure{
     width:100%; height:100%;
@@ -195,6 +196,7 @@ ul,li{list-style: none; margin:0; padding:0;}
     width: 100%;
     padding: 0 30px;
     top: 50%;
+    transform: translateY(-50%);
 }
 .slide .direc div{
     width:100%; margin:0;
@@ -202,11 +204,15 @@ ul,li{list-style: none; margin:0; padding:0;}
     justify-content: space-between;
     align-items: center;
 }
-.prev, .next{color:white !important;}
+.prev, .next{
+    color:white !important;
+    font-size:3em;
+}
 
 
 /* indigator */
 .mainspot .slide .indi{
+    display:none;
     position:absolute;
     bottom:5%;
     width: 100%;
@@ -404,7 +410,6 @@ ul,li{list-style: none; margin:0; padding:0;}
         padding:20px;
         background:#fcf3e4;
     }
-
     .room_spot li div:nth-of-type(1){
         width:100%;
         margin:0 auto 20px;
@@ -413,14 +418,15 @@ ul,li{list-style: none; margin:0; padding:0;}
     .room_spot li div:nth-of-type(1) p{
         font-size:0.8rem;
     }
+    .room_spot li div:nth-of-type(1) a {
+        width:100%;
+    }
     .room_spot li div:nth-of-type(1) span{
         display:none;
     }
     .room_spot li div:nth-of-type(2){
-        width:90%; margin:0 auto;
-    }
-    .room_spot li div:nth-of-type(1) a {
-        width:100%;
+        margin:0 auto;
+        width:90%;
     }
 
     .mainspot .slide{
