--- a/daon/css/slick.css
+++ b/daon/css/slick.css
@@ -1,6 +1,6 @@
 /* Slider */
 .slick-slider
-{
+{  
     position: relative;
 
     display: block;
@@ -19,7 +19,7 @@
 }
 
 .slick-list
-{
+{   width:100%; height:100%;
     position: relative;
 
     display: block;
@@ -49,7 +49,7 @@
 }
 
 .slick-track
-{
+{   width:100%; height:100%;
     position: relative;
     top: 0;
     left: 0;
@@ -76,6 +76,7 @@
 
 .slick-slide
 {
+    width:100%; height:100%;
     display: none;
     float: left;
 
@@ -120,37 +121,52 @@
 
 
 
+.slick-slide div{width:100%; height:100%;}
+
 button{
     outline-style:none;
 }
 
 .slick-prev{ 
     position:absolute;
-    left:0; top:50%;
+    left:5%; top:50%;
     width:60px;  height:60px;
-    background:#f00;
+    border: none;
     z-index:10;
+    text-indent: -9990em;
+    background:none;
+    transform: translateY(-50%);
 }
 .slick-next{
     position:absolute;
-    right:0; top:50%;
+    right:5%; top:50%;
     width:60px;  height:60px;
-    background:#f00;
     z-index:10;
+    border: none;
+    text-indent: -9990em;
+    background:none;
+    transform: translateY(-50%);
 }
+
 .slick-dots{
     text-align:center;
+    position: absolute;
+    left: 50%;
+    bottom: 5%;
+    transform: translateX(-50%);
 }
 .slick-dots li{
     display:inline-block;
+    padding:0 5px;
 }
 .slick-dots li button{
     font-size:0;
-    width:20px; height:20px;
-    border-radius:100%;
+    width:15px; height:15px;
+    border-radius:50%;
     border:none;
     margin:0 5px;
+    vertical-align: middle;
 }
 .slick-active button{
-    background:#f00;
+    background:#003a3a;
 }
